app/src/main/java/com/example/fail/Wind.kt
package com.example.fail

data class Wind(
    val deg: Int,
    val gust: Double,
    val speed: Double
)